Coursera/RedBelt/Week6/.metadata/.plugins/org.eclipse.cdt.ui/global-build.log
Info: Nothing to build for final_red_belt_part_1
11:57:53 **** Incremental Build of configuration Debug for project final_red_belt_part_1 ****
Info: Internal Builder is used for build
g++ -std=c++1z -O0 -g3 -Wall -c -fmessage-length=0 -o "src\\search_server.o" "..\\src\\search_server.cpp" 
g++ -o final_red_belt_part_1.exe "src\\final_red_belt_part_1.o" "src\\parse.o" "src\\search_server.o" 
12:00:41 **** Incremental Build of configuration Debug for project final_red_belt_part_1 ****
Info: Internal Builder is used for build
g++ -std=c++1z -O0 -g3 -Wall -c -fmessage-length=0 -o "src\\search_server.o" "..\\src\\search_server.cpp" 
g++ -o final_red_belt_part_1.exe "src\\final_red_belt_part_1.o" "src\\parse.o" "src\\search_server.o" 
12:00:53 **** Incremental Build of configuration Debug for project final_red_belt_part_1 ****
Info: Internal Builder is used for build
g++ -std=c++1z -O0 -g3 -Wall -c -fmessage-length=0 -o "src\\search_server.o" "..\\src\\search_server.cpp" 
g++ -o final_red_belt_part_1.exe "src\\final_red_belt_part_1.o" "src\\parse.o" "src\\search_server.o" 
12:01:54 **** Incremental Build of configuration Debug for project final_red_belt_part_1 ****
Info: Internal Builder is used for build
g++ -std=c++1z -O0 -g3 -Wall -c -fmessage-length=0 -o "src\\search_server.o" "..\\src\\search_server.cpp" 
..\src\search_server.cpp: In member function 'void SearchServer::AddQueriesStream(std::istream&, std::ostream&)':
..\src\search_server.cpp:57:24: error: expected ';' before '}' token
        cout << i << " "
                        ^
                        ;
       }
       ~                 
12:02:03 **** Incremental Build of configuration Debug for project final_red_belt_part_1 ****
Info: Internal Builder is used for build
g++ -std=c++1z -O0 -g3 -Wall -c -fmessage-length=0 -o "src\\search_server.o" "..\\src\\search_server.cpp" 
g++ -o final_red_belt_part_1.exe "src\\final_red_belt_part_1.o" "src\\parse.o" "src\\search_server.o" 
12:04:00 **** Incremental Build of configuration Debug for project final_red_belt_part_1 ****
Info: Internal Builder is used for build
g++ -std=c++1z -O0 -g3 -Wall -c -fmessage-length=0 -o "src\\search_server.o" "..\\src\\search_server.cpp" 
g++ -o final_red_belt_part_1.exe "src\\final_red_belt_part_1.o" "src\\parse.o" "src\\search_server.o" 
